--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -10,4 +10,7 @@
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view>
+  <view class="usermotto">
+    <text class="user-motto">生活是一团麻</text>
+  </view>
 </view>
